--- a/src/About.css
+++ b/src/About.css
@@ -2,10 +2,10 @@
   background-image: url('./images/about-bg.png');
   background-repeat: no-repeat;
   background-size: 55%;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
   line-height: 1.8em;
-  color: #666666;
+  color: #41434f;
 }
 
 @media all and (min-width: 1073px) {
@@ -84,6 +84,7 @@
 /* LISTS */
 
 .list-column {
+  padding: 10px;
   width: 33.333333%;
   box-sizing: border-box;
 }
@@ -101,7 +102,8 @@
 }
 
 .about-section-header {
-  margin-top: 100px;
+  margin-top: 32px;
+  text-align: center;
 }
 
 .cat-pic {
