--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,7 @@
 .about {
   background-image: url('./images/about-bg.png');
   background-repeat: no-repeat;
-  background-size: 55%;
+  background-size: 100%;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   line-height: 1.8em;
@@ -28,6 +28,8 @@
 .daihan-who {
   height: 400px;
   max-width: 300px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
   margin: 0 auto;
   background-image: url('./images/daihan.png');
   background-size: 300px;
@@ -65,11 +67,13 @@
 
 @media all and (min-width: 1050px) {
   .shape-container {
+    top: 80px;
     float: left;
   }
   .daihan-caption {
     height: 475px;
     overflow: auto;
+    padding-top: 80px;
   }
 }
 
@@ -77,7 +81,6 @@
   .daihan-caption {
     padding-left: 80px;
     padding-right: 80px;
-    padding-top: 30px;
   }
 }
 
