--- a/src/Footer.css
+++ b/src/Footer.css
@@ -19,7 +19,7 @@
   font-weight: 300;
   width: calc( 100% - 40px);
   margin: 0 20px;
-  color: #333333;
+  color: #41434f;
 }
 
 .footer-text p {
@@ -113,5 +113,6 @@
 }
 
 .pre-footer a:hover, .pre-footer a:active, .pre-footer a:focus {
-  color: white;
+  cursor: pointer;
+  color: #ffd2ad;
 }
