--- a/src/Grid.css
+++ b/src/Grid.css
@@ -39,6 +39,7 @@
 }
 
 .about-link {
+  padding: 0; /* Fixes an issue on Chrome where the focus border is shaped weirdly */
   position: absolute;
   top: 80%;
   right: 20%;
@@ -47,12 +48,32 @@
   font-weight: 700;
 }
 
+/*.about-link:after {
+  content: ' →';
+}*/
+
 @media all and (min-width: 768px) {
   .about-link {
     top: 69%;
     right: 25%;
-    font-size: 2em;
+    font-size: 1.5em;
   }
+  /*.about-link:after {
+    content: '';
+    background-image: url('./images/about-arrow.png');
+    background-repeat: no-repeat;
+    background-size: 20%;
+    background-position: left;
+    width: 3.5em;
+    height: 1em;
+    display: inline-block;
+    margin-left: 0.5em;
+    transition: 0.5s width;
+  }
+  .about-link:hover:after {
+    content: '⟶';
+    transition: 0.5s width;
+  }*/
 }
 
 .intro-title {
