--- a/src/Grid.css
+++ b/src/Grid.css
@@ -54,25 +54,24 @@
 
 @media all and (min-width: 768px) {
   .about-link {
-    top: 69%;
+    top: 67%;
     right: 25%;
-    font-size: 1.5em;
+    font-size: 1.3em;
+    line-height: 24px;
   }
   .about-link:after {
     content: url('./images/about-arrow.svg');
-    width: 2.5em;
-    height: 1.2em;
+    width: 2.2em;
     display: inline-block;
     box-sizing: border-box;
     text-align: right;
     vertical-align: middle;
     padding-right: 1em;
-    transition: padding-right 0.5s;
+    transition: padding-right 0.2s ease-in-out;
   }
   .about-link:hover:after {
     content: url('./images/about-arrow2.svg');
-    padding-right: 0.5em;
-    transition: padding-right 0.5s;
+    padding-right: 0.7em;
   }
 }
 
