--- a/src/TileViews/Kudos.css
+++ b/src/TileViews/Kudos.css
@@ -17,8 +17,7 @@
 
 @media all and (min-width: 800px) {
   .kudos-inlay {
-    width: 60%;
-    margin-left: 20%;
+    margin: auto 17.5%;
   }
 }
 
@@ -47,7 +46,7 @@
 }
 
 .kudos-desc {
-  margin-top: 60px;
+  margin-top: 70px;
 }
 
 .kudos-caption {
