--- a/src/TileViews/Kudos.css
+++ b/src/TileViews/Kudos.css
@@ -2,9 +2,9 @@
 
 .kudos-header {
   background-image: url('../images/kudos/back-blue.png');
-  background-size: 100% 100%;
   position: relative;
-  min-height: 40vh;
+  background-size: 100% 100%;
+  height: 318px; /* Note: Keep this synced up with the content-header CSS */
 }
 
 /* ETC */
@@ -17,12 +17,12 @@
 
 @media all and (min-width: 800px) {
   .kudos-inlay {
-    margin: auto 17.5%;
+    margin: auto 15.5%;
   }
 }
 
 .kudos-wrapper {
-  padding-top: 300px;
+  padding-top: 230px;
 }
 
 .kudos-inlay-img {
@@ -34,7 +34,14 @@
   width: 100%;
 }
 
-.kudos-title h3, .kudos-title h1 {
+.kudos-title h1 {
+  color: white;
+  font-size: 40px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+
+.kudos-title h3 {
   color: white;
 }
 
@@ -46,7 +53,7 @@
 }
 
 .kudos-desc {
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 .kudos-caption {
