--- a/src/Grid.css
+++ b/src/Grid.css
@@ -2,16 +2,7 @@
   position: relative;
   border-radius: 18px;
   padding-bottom: 30px;
-  box-shadow: 0 -5px 50px 0 rgba(0,0,0,0.05),0 -2px 15px 0 rgba(0,0,0,0.05);
   background-color: white;
-}
-
-.grid-wrapper-bottom {
-  position: absolute;
-  bottom: -25px;
-  background-color: white;
-  height: 40px;
-  width: 100%;
 }
 
 .grid-container {
@@ -29,14 +20,6 @@
 }
 
 /* INTRO */
-
-.email-link {
-  font-family: 'Roboto', sans-serif;
-  color: #EA1C44;
-  font-size: 16px;
-  font-weight: 700;
-  display: none;
-}
 
 .about-link {
   padding: 0; /* Fixes an issue on Chrome where the focus border is shaped weirdly */
@@ -76,46 +59,18 @@
   }
 }
 
-.intro-title {
-  /* Mobile view goes here */
-}
-
-@media all and (min-width: 350px) {
-  .intro-title {
-    /* Medium size view / brown dog */
-  }
-}
-
-@media all and (min-width: 0) {
-  .intro-title {
-    width: 56.5%;
-  }
-}
-
-@media all and (min-width: 1180px) {
-  .intro-title {
-    width: 452px;
-  }
+.daihan-img {
+  max-width: 326px;
 }
 
 .front-page-backdrop {
   position: relative;
-  background-image: url('./images/landing-background-mobile.png');
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: top right;
+  max-width: 830px;
+  margin: 50px auto;
+  box-sizing: border-box;
 
+  /* fonts */
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   line-height: 1.8em;
-  width: 100%;
-  height: 36vh;
-  box-sizing: border-box;
-}
-
-@media all and (min-width: 550px) {
-  .front-page-backdrop {
-    background-image: url('./images/landing-background.png');
-    height: 40vw;
-  }
 }
