--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,10 +3,9 @@
 }
 
 .footer-content {
-  padding-top: 100px;
-  width: 100%;
   height: 300px;
   margin: auto;
+  max-width: 600px;
 }
 
 .line {
@@ -18,8 +17,9 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   width: calc( 100% - 40px);
-  margin: 0 20px;
+  margin: 0 auto;
   color: #41434f;
+  max-width: 400px;
 }
 
 .footer-text p {
@@ -48,71 +48,4 @@
 
 .footer-image-wrapper {
   opacity: 0;
-}
-
-@media all and (min-width: 535px) {
-  .footer {
-    padding-top: 0;
-    padding-bottom: 100px;
-  }
-  .footer-text {
-    width: 400px;
-    margin: 0 auto;
-    padding-left: 100px;
-  }
-  .footer-image {
-    display: block;
-  }
-}
-
-@media all and (min-width: 1000px) {
-  .footer-content {
-    padding-top: 200px;
-    margin: 0 auto;
-    margin-top:20px;
-    width: 600px;
-  }
-  .footer-text {
-    padding: 0;
-    float: right;
-  }
-  .footer-image-wrapper {
-    float: left;
-    position: relative;
-    opacity: 1;
-    width: 200px;
-    height: 300px;
-  }
-}
-
-.pre-footer {
-  width: 100%;
-  height: 300px;
-  box-sizing: border-box;
-  background-image: url('./images/writing-bg.png');
-  background-size: auto 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #421DA9;
-  text-align: center;
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  padding-top: 50px;
-}
-
-.pre-footer h1 {
-  color: white;
-  text-align: center;
-}
-
-.pre-footer p a {
-  color: white;
-  text-align: center;
-  font-family: inherit;
-  font-weight: bold;
-}
-
-.pre-footer a:hover, .pre-footer a:active, .pre-footer a:focus {
-  cursor: pointer;
-  color: #ffd2ad;
 }
