--- a/src/Grid.css
+++ b/src/Grid.css
@@ -30,7 +30,7 @@
   position: relative;
   max-width: 830px;
   margin: 50px auto;
-  box-sizing: border-box;
+  padding: 0 50px;
 
   /* fonts */
   font-family: 'Roboto', sans-serif;
