--- a/src/TileViews/Kudos.css
+++ b/src/TileViews/Kudos.css
@@ -1,17 +1,7 @@
-/* HEADERS */
-
-.kudos-header {
-  background-image: url('../images/kudos/back-blue.png');
-  position: relative;
-  background-size: 100% 100%;
-  height: 318px; /* Note: Keep this synced up with the content-header CSS */
-}
-
 /* ETC */
 
 .kudos-inlay {
-  position: absolute;
-  top: 50%;
+  display: flex;
   margin-left: 25px;
 }
 
@@ -22,12 +12,14 @@
 }
 
 .kudos-wrapper {
-  padding-top: 230px;
+}
+
+.kudos-inlay-img-wrapper {
+  width: 50%;
 }
 
 .kudos-inlay-img {
-  float: right;
-  width: 50%;
+  width: 100%;
 }
 
 .kudos-big-img {
@@ -35,25 +27,21 @@
 }
 
 .kudos-title h1 {
-  color: white;
   font-size: 40px;
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
 }
 
 .kudos-title h3 {
-  color: white;
 }
 
 @media all and (min-width: 100px) {
   .kudos-title {
-    float: left;
     width: 50%;
   }
 }
 
 .kudos-desc {
-  margin-top: 100px;
   font-family: 'Roboto', sans-serif;
 }
 
