--- a/src/Intro.css
+++ b/src/Intro.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
 
   /* fonts */
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Futura', sans-serif;
   font-weight: 300;
   line-height: 1.8em;
 }
@@ -25,4 +25,8 @@
 .daihan-caption {
   word-wrap: break-word;
   max-width: 420px;
+}
+
+.down-arrow {
+  height: 44px;
 }
