--- a/src/Main.css
+++ b/src/Main.css
@@ -4,9 +4,9 @@
 
 h1 {
   text-align: left;
-  font-weight: 100;
-  font-size: 2.0em;
-  color: #41434f;
+  font-weight: 700;
+  font-size: 1.125em;
+  color: #E68F6C;
 }
 
 h2 {
