--- a/src/Main.css
+++ b/src/Main.css
@@ -15,9 +15,12 @@ h2 {
   color: #100C3A;
 }
 
+/* NOTE: h3 has the same styling as h1, but is used for sub-sub-sections (eg. in Q-AND-A) */
 h3 {
-  font-size: 1em;
-  color: #F9CBCE;
+  text-align: left;
+  font-weight: 700;
+  font-size: 1.125em;
+  color: #E68F6C;
 }
 
 p, li {
