--- a/src/TileViews/Kudos.css
+++ b/src/TileViews/Kudos.css
@@ -2,6 +2,8 @@
 
 .kudos-inlay {
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
   margin-left: 25px;
 }
 
@@ -15,7 +17,11 @@
 }
 
 .kudos-inlay-img-wrapper {
-  width: 50%;
+  flex-basis: 50%;
+  padding: 0 40px;
+  min-width: 300px;
+  max-width: 480px;
+  box-sizing: border-box;
 }
 
 .kudos-inlay-img {
@@ -26,23 +32,23 @@
   width: 100%;
 }
 
+.kudos-title {
+  flex-basis: 50%;
+  max-width: 400px;
+}
+
 .kudos-title h1 {
-  font-size: 40px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Futura', sans-serif;
   font-weight: 700;
 }
 
 .kudos-title h3 {
 }
 
-@media all and (min-width: 100px) {
-  .kudos-title {
-    width: 50%;
-  }
-}
-
 .kudos-desc {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Futura', sans-serif;
+  font-size: 0.875em;
+  line-height: 1.5em;
 }
 
 .kudos-caption {
