--- a/src/Tile.css
+++ b/src/Tile.css
@@ -84,7 +84,7 @@
   width: 114px;
   text-align: center;
   border-radius: 20px;
-  padding: 2px, 16px, 2px, 16px;
+  padding: 2px 16px 2px 16px;
 }
 
 .tile-title {
