Finish RBCx page

--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -3,6 +3,7 @@
 .content-wrapper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   max-width: 840px;
   margin: 50px auto;
 }
@@ -41,7 +42,9 @@
 
 .content-mini-caption {
   margin: 0.5rem auto;
+  font-family: 'Futura', sans-serif;
   font-size: 0.75em;
+  color: #717994;
 }
 
 .content-caption {
