--- a/src/Tile.css
+++ b/src/Tile.css
@@ -42,8 +42,8 @@
 }
 
 .overlay-text {
-  font-family: 'Open Sans', sans-serif;
-  color: #333333;
+  font-family: 'Futura', sans-serif;
+  color: #3A4468;
   font-size: 28px;
   line-height: 160%;
   position: absolute;
@@ -51,6 +51,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+}
+
+.overlay-subtext {
+  font-size: 14px;
 }
 
 .tile-bgd {
