--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -38,6 +38,10 @@
   width: 100%;
 }
 
+.shadowed-img {
+  box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
+}
+
 /* TEXT */
 
 .content-mini-caption {
