--- a/src/Main.css
+++ b/src/Main.css
@@ -33,8 +33,8 @@ a, button {
   border: none;
   background-color: transparent;
   font: inherit;
-  text-decoration: none;
-  color: #E68F6C;
+  color: inherit;
+  text-decoration: underline;
   transition: color 0.3s ease-in-out;
 }
 
