--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,6 @@
 .header {
   max-width: 840px;
-  margin: 50px auto;
+  margin: 70px auto 100px;
   padding: 0 50px;
   display: flex;
   justify-content: space-between;
