--- a/src/Intro.css
+++ b/src/Intro.css
@@ -2,7 +2,7 @@
   align-items: center;
   position: relative;
   max-width: 840px;
-  margin: 50px auto;
+  margin: 50px auto 100px;
   padding: 0 50px;
   display: flex;
   flex-wrap: wrap;
