Update tile size for mobile

--- a/src/Content.css
+++ b/src/Content.css
@@ -6,3 +6,9 @@
   animation-fill-mode: forwards;
   border-radius: 5px;
 }
+
+@media all and (max-width: 500px) {
+  .floatingTile {
+    width: calc(100% - 80px);
+  }
+}
