--- a/src/Tile.css
+++ b/src/Tile.css
@@ -1,12 +1,9 @@
 .tile {
   position: relative;
-
-  width: 400px;
+  max-width: 400px;
   background-color: #FFFFFF;
-
   border-radius: 18px;
   box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
-
   transition: transform 0.3s ease-out;
 }
 
