--- a/src/Tile.css
+++ b/src/Tile.css
@@ -2,7 +2,7 @@
   position: relative;
   max-width: 400px;
   background-color: #FFFFFF;
-  border-radius: 18px;
+  border-radius: 5px;
   box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
   transition: transform 0.3s ease-out;
 }
@@ -29,7 +29,7 @@
   width: 100%;
   opacity: 0;
   transition: .3s ease;
-  border-radius: 18px;
+  border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.95);
 }
 
@@ -55,7 +55,7 @@
 
 .tile-bgd {
   width: 100%;
-  border-radius: 18px 18px 0 0;
+  border-radius: 5px 5px 0 0;
 }
 
 .tile-bottom {
@@ -70,7 +70,7 @@
 
 .tile-header-text {
   font-family: 'Futura', sans-serif;
-  font-size: 12px;
+  font-size: 0.75em;
   font-weight: 500;
   background-color: #FFE6DC;
   display: inline;
