--- a/src/About.css
+++ b/src/About.css
@@ -19,6 +19,10 @@
   margin: 100px auto;
 }
 
+.about-block.block-A {
+  padding-top: 50px;
+}
+
 .about-caption {
   word-wrap: break-word;
   max-width: 400px;
