--- a/src/Intro.css
+++ b/src/Intro.css
@@ -1,3 +1,9 @@
+.intro-wrapper {
+  background-color: white;
+  border-radius: 10px;
+  margin: 16px;
+}
+
 .intro {
   align-items: center;
   position: relative;
