--- a/src/Content.css
+++ b/src/Content.css
@@ -1,3 +1,13 @@
+.content-container {
+  background-color: white;
+  border-radius: 10px;
+  margin: 16px;
+}
+
+.grid-content-container {
+  background-color: inherit;
+}
+
 .floatingTile {
   position: fixed;
   width: 400px;
