--- a/src/Main.css
+++ b/src/Main.css
@@ -7,7 +7,7 @@ h1 {
   font-weight: 400;
   font-size: 1.5em;
   margin: 0.5em 0 1.5em;
-  font-family: 'Glida Display';
+  font-family: 'Gilda Display';
   color: #142130;
 }
 
