--- a/src/Main.css
+++ b/src/Main.css
@@ -5,7 +5,8 @@
 h1 {
   text-align: left;
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: 1.75em;
+  line-height: 150%;
   margin: 0.5em 0 1.5em;
   font-family: 'Gilda Display';
   color: #142130;
@@ -37,6 +38,8 @@ a, button {
   color: inherit;
   text-decoration: underline;
   transition: color 0.3s ease-in-out;
+  font-weight: 100;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a:hover, button:hover, a:focus, button:focus {
