Add new grid heading

--- a/src/Intro.css
+++ b/src/Intro.css
@@ -1,5 +1,5 @@
 .intro-wrapper {
-  background-color: white;
+  background-image:  url('./images/1.png');
   border-radius: 10px;
   margin: 16px;
 }
