--- a/src/Grid.css
+++ b/src/Grid.css
@@ -16,6 +16,22 @@
   margin-block-end: 0.83em;
 }
 
+.grid-heading-content {
+  position: relative;
+  font-weight: 400;
+}
+
+.grid-heading-content::after {
+  content:" ";
+  height: 1px;
+  width: calc(100% - 90px);;
+  background-color: #DDE1E7;
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0;
+}
+
 .grid-container {
   display: grid;
   grid-gap: 40px;
