--- a/src/Main.css
+++ b/src/Main.css
@@ -27,7 +27,7 @@ h3 {
 
 p, li {
   font-weight: 100;
-  color: #627A90;
+  color: #445768;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
 }
