--- a/src/Content.css
+++ b/src/Content.css
@@ -25,7 +25,7 @@
 }
 
 .about-wrapper {
-  background-image: url('./images/Peach.png');
-  background-repeat: repeat-x;
-  background-size: auto 50vh;
+  background-color: white;
+  border-radius: 10px;
+  margin: 16px;
 }
