--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -51,7 +51,7 @@
 
 .content-mini-caption {
   margin: 0.5rem auto;
-  font-family: 'Futura', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 0.75em;
   color: #717994;
 }
@@ -62,7 +62,7 @@
 }
 
 .content-caption h1 {
-  font-family: 'Futura', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
 
