--- a/src/Footer.css
+++ b/src/Footer.css
@@ -14,7 +14,7 @@
 }
 
 .footer-text {
-  font-family: 'Futura', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   /* margin: 0 auto; */
   color: white;
