--- a/src/Intro.css
+++ b/src/Intro.css
@@ -1,8 +1,14 @@
 .intro-wrapper {
-  background-image:  url('./images/1.png');
+  background-image:  url('./images/bg1.png');
   background-size: 100% 100%;
   border-radius: 10px;
   margin: 16px;
+}
+
+@media all and (max-width: 500px) {
+  .intro-wrapper {
+    background-image:  url('./images/bg1-mobile.png');
+  }
 }
 
 .intro {
