--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,7 +1,3 @@
-.grid-view {
-  /* margin-top: 100px */
-}
-
 .grid-wrapper {
   position: relative;
   padding: 100px 40px 100px;
@@ -19,17 +15,16 @@
 .grid-heading-content {
   position: relative;
   font-weight: 500;
+  display: flex;
+  align-items: center;
 }
 
 .grid-heading-content::after {
   content:" ";
   height: 1px;
-  width: calc(100% - 90px);;
+  flex: 1;
   background-color: #DDE1E7;
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 0;
+  margin-left: 16px;
 }
 
 .grid-container {
