--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -8,7 +8,6 @@
 
 .content-wrapper {
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -75,8 +74,13 @@
   font-weight: 700;
 }
 
+.content-caption h2 {
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+
 .content-desc {
-  line-height: 1.5rem;
+  line-height: 175%;
 }
 
 /* MAGIC */
