--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -62,6 +62,11 @@
   box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
 }
 
+.bordered-img {
+  border-width: 1px;
+  border-color: #DDDDDD
+}
+
 /* TEXT */
 
 .content-mini-caption {
